# 04_AI_Chatbot

./: .env.example  .gitignore  Agents.md  BROWSER_INSTALL_COMMANDS.md  EMERGENCY_START_04_AI_Chatbot.bat  FIX_INSTALLATION.md  PORT_CONFLICT_SOLVED.md  README.md  README_WINDOWS.md  WINDOWS_ACCESS_SOLUTION.md  WINDOWS_SETUP_GUIDE.md  app.py  auto_start.bat  chatbot.bat  current_packages.txt  debug_start.bat  install_fixed.bat  install_missing_packages.bat  install_wsl.bat  install_wsl_browser.sh  kill_processes.bat  main.py  pyproject.toml  pytest.ini  quick_start.bat  requirements-test.txt  requirements.txt  requirements_windows.txt  run_app.bat  run_project.py  run_with_venv.py  start.bat  start_app_fixed.py  start_demo.py  start_gui_options.bat  start_menu.bat  start_windows.bat  start_windows.py  start_windows_ascii.bat  start_windows_simple.bat  (+12 more)
.ai_exchange/: ZUSAMMENFASSUNG_FINAL.md  agents_comprehensive_list.csv  bandit_report.json  bandit_report.txt  bug_AI_Chat.txt  bug_bericht.md  bug_bericht.txt  flake8_report.json  flake8_report.txt  message.txt  mypy_report.txt  performance_benchmark.py  performance_output.txt  performance_report.json  performance_report.txt  pylint_report.json  pylint_report.txt  task_optimize_test_changecode.txt
.github/workflows/: ci-cd.yml
01_Documentation/: Claude-Flow WhatsApp Chatbot - Ablaufdokumentation.md  Ergebnis Codecheck.xlsx  Implementation Guide for WhatsApp-like AI Chatbot in Python.md  Multi-Agent AI Systems and Swarms for Messaging Applications_ 2025 Market Analysis.md  Standardagents_Cloude.md  Standardagents_Cloude.xlsx  V91 claude-flow automatische agentenkonfiguration.md
01_Documentation/AI_CHAT_mit_Agenstensystem/: Multi-Agent KI-System as WhatsApp Alternative_ Implementation Plan and Roadmap.md
01_Documentation/Umsetzungsplan + Checkliste/: updated_ablaufdokumentation.md  whatsapp_chatbot_checkliste.md  whatsapp_chatbot_checkliste_erweitert.md  whatsapp_chatbot_umsetzungsplan.md  whatsapp_chatbot_umsetzungsplan_erweitert.md
02_Configuration/Rules/: ai_coding_station_ui_code.md
BEISPIEL_01_Documentation/: Anleitung zur Installation und Nutzung von Claude-Flow v2 (Hive-Mind Modus).docx  Anleitung zur Installation und Nutzung von Claude-Flow v2 (Hive-Mind Modus).txt  Claude-Code Issue Prompt.txt  Dies und Das.txt  Installations und Verwendungsdokumentation Codex CLI.docx  Setup Global und Projektbezogen.txt  beispiel_check_git_init.py  check_init_claude-Flow und Claude.bat  issues.txt  wsl-sqlite-ioerror-fix.md
BEISPIEL_01_Documentation/01_Claude/: Anleitung zur Installation und Nutzung von Claude-Flow v2 (Hive-Mind Modus).txt  app_agents_path.docx  (+17 more)
config/: config.py  logging_config.py  settings.py
docs/: APPLICATION_VALIDATION_REPORT.md  ERFOLGREICHE_LOESUNG.md  FINAL_VALIDATION_REPORT.md  HIVE_MIND_COLLECTIVE_REPORT.md  PRODUCTION_READINESS_CHECKLIST.md  STARTUP_GUIDE.md  START_BAT_SUCCESS.md  SUCCESS_COMPLETE.md  SYSTEM_ANALYSIS_REPORT.md  SYSTEM_ANALYST_FINAL_REPORT.md  TESTING_GUIDE.md  TESTING_VALIDATION_REPORT.md  THREADING_FIX_SUCCESS.md  TROUBLESHOOTING_GUIDE.md  WSL_BROWSER_SOLUTION.md  WSL_PROBLEM_SOLVED.md  bug.txt  code_quality_analysis_report.md  dependency-analysis-report.md  risk_analysis.txt  validation_status_report.md
migrations/: 001_initial_schema.sql
scripts/: run_tests.py  setup.py  system_health_monitor.py  test_config.py  verify_installation.py
src/: __init__.py  main.py
tests/: README.md  TEST_VALIDATION_REPORT.md  __init__.py  agent_validation_framework.py  conftest.py  detailed_agent_analysis.py  test_api.py  test_bug_fixes.py  test_comprehensive_validation.py  test_database.py  test_database_basic.py  test_final_validation.py  test_focused_validation.py  test_performance_optimizations.py  test_rag.py  test_smoke_tests.py  test_startup_validation.py  test_validation_framework.py  test_websocket.py
(+179 files in other folders)
